--- a/planner.css
+++ b/planner.css
@@ -34,12 +34,13 @@ h1{
 .pendItems{
     padding: 10px;
     display:flex;
-    flex-direction: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pendItem{
-    width: 375px;
-
+    width: 350px;
+    margin: 10px;
     border-color: red;
     border-width: 5px;
     border-style: solid;
@@ -61,6 +62,7 @@ h1{
     border-radius: 10px;
     height:100%;
     width:400px;
+    overflow-y:auto;
 }
 
 .ongTitle{
@@ -75,12 +77,13 @@ h1{
 .ongItems{
     padding: 10px;
     display:flex;
-    flex-direction: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .ongItem{
-    width: 375px;
-
+    width: 350px;
+    margin: 10px;
     border-color: yellow;
     border-width: 5px;
     border-style: solid;
@@ -102,6 +105,7 @@ h1{
     border-radius: 10px;
     height:100%;
     width:400px;
+    overflow-y:auto;
 }
 .endTitle{
     border-bottom-color: lime;
@@ -115,12 +119,13 @@ h1{
 .endItems{
     padding: 10px;
     display:flex;
-    flex-direction: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .endItem{
-    width: 375px;
-
+    width: 350px;
+    margin: 10px;
     border-color: lime;
     border-width: 5px;
     border-style: solid;
